--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "browserify": "^16.5.0",
     "curl": "^0.1.4",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "https": "^1.0.0",
     "jquery": "^3.4.1",
